prometheus-operator/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-operator
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: prometheus.sudojoss.com
    http:
      paths:
        - backend:
            serviceName: prometheus-operator-prometheus
            servicePort: 9090
  - host: grafana.sudojoss.com
    http:
      paths:
        - backend:
            serviceName: prometheus-operator-grafana
            servicePort: 80
  - host: alertmanager.sudojoss.com
    http:
      paths:
        - backend:
            serviceName: prometheus-operator-alertmanager
            servicePort: 9093
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - prometheus.sudojoss.com
    - grafana.sudojoss.com
    - alertmanager.sudojoss.com
